vehicle/tests/golden/error/parsing/invalidAnnotationParameterValue/invalidAnnotationParameterValue.vcl
@parameter(infer = xsd)
epsilon : Real
